# PDFtoJSON

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  include
res/: inky_5eRV_caster.dict  pathfinder_6_pgs.dict
src/: Abilities.h  AcroFormReader.cpp  AcroFormReader.h  AcroFormValue.cpp  AcroFormValue.h  Character.h  Class.h  Companion.h  Concepts.h  Description.h  Dictionary.cpp  Dictionary.h  DruidForm.h  Inventory.h  Item.h  JSONObject.cpp  JSONObject.h  Reader.cpp  Reader.h  Spell.h  Stats.h  abilities.inl  damageTypes.inl  main.cpp  pdfFormObjectTValues.inl  stats.inl
